--- a/public/styles.css
+++ b/public/styles.css
@@ -12,6 +12,14 @@
   line-height: 150%;
 }
 
+body {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
+
 a,
 a:visited {
   color: #ff4724;
@@ -62,33 +70,138 @@ h3 > a {
   line-height: 180%;
 }
 
+/* animated bg */
+
+.greenCircle {
+  width: 40vw;
+  height: 40vw;
+  background-color: #e5ef53;
+  position: absolute;
+  animation-name: greenCircle;
+  animation-duration: 15s;
+  border-radius: 50%;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  z-index: -1;
+  opacity: 0.5;
+}
+
+@keyframes greenCircle {
+  0% {
+    left: 0%;
+    top: 0%;
+  }
+  25% {
+    left: 25%;
+    top: 12%;
+  }
+  50% {
+    left: 50%;
+    top: 44%;
+  }
+  75% {
+    left: 75%;
+    top: 25%;
+  }
+  100% {
+    left: 18%;
+    top: 100%;
+  }
+}
+
+.lavCircle {
+  width: 60vw;
+  height: 60vw;
+  background-color: #e0deff;
+  position: absolute;
+  animation-name: lavCircle;
+  animation-duration: 20s;
+  border-radius: 50%;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  z-index: -1;
+}
+
+@keyframes lavCircle {
+  0% {
+    left: 50%;
+    top: 100%;
+  }
+  25% {
+    left: 75%;
+    top: 50%;
+  }
+  50% {
+    left: 50%;
+    top: 0%;
+  }
+  75% {
+    left: 0%;
+    top: 100%;
+  }
+  100% {
+    left: 0%;
+    top: 0%;
+  }
+}
+
+.redCircle {
+  width: 20vw;
+  height: 20vw;
+  background-color: #ff4724; /* red */
+  position: absolute;
+  animation-name: redCircle;
+  animation-duration: 25s;
+  border-radius: 50%;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  z-index: -1;
+  opacity: 0.25;
+}
+
+@keyframes redCircle {
+  0% {
+    left: 50%;
+    top: 0%;
+  }
+  25% {
+    left: 50%;
+    top: 25%;
+  }
+  50% {
+    left: 0%;
+    top: 50%;
+    opacity: 0.5;
+  }
+  75% {
+    left: 0%;
+    top: 75%;
+  }
+  100% {
+    left: 50%;
+    top: 0%;
+  }
+}
+
 /* Mobile Optimization */
 
 @media screen and (max-width: 768px) {
   #root {
     float: none;
     width: auto;
+    margin: 0;
   }
   * {
-    font-size: 16px;
+    font-size: 14px;
   }
   h1 {
-    font-size: 25px;
+    font-size: 21px;
   }
   h2,
   h2 > span {
-    font-size: 24px;
+    font-size: 21px;
   }
   h3 {
-    font-size: 15px;
+    font-size: 14px;
   }
-}
-
-/* Scroll Magic Test */
-.panel {
-  height: 100%;
-  width: 100%;
-}
-.panel.green {
-  margin-bottom: 400px;
 }
