--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,3 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
 /* scrollbar */
 ::-webkit-scrollbar {
   width: 5px;
@@ -25,6 +11,6 @@ code {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #efefef;
+  background: #fff;
   border-radius: 25px;
 }
