--- a/public/styles.css
+++ b/public/styles.css
@@ -83,7 +83,7 @@ h3 > a {
   animation-iteration-count: infinite;
   animation-direction: alternate;
   z-index: -1;
-  opacity: 0.5;
+  filter: blur(200px);
 }
 
 @keyframes greenCircle {
@@ -120,6 +120,7 @@ h3 > a {
   animation-iteration-count: infinite;
   animation-direction: alternate;
   z-index: -1;
+  filter: blur(200px);
 }
 
 @keyframes lavCircle {
@@ -156,7 +157,7 @@ h3 > a {
   animation-iteration-count: infinite;
   animation-direction: alternate;
   z-index: -1;
-  opacity: 0.25;
+  filter: blur(200px);
 }
 
 @keyframes redCircle {
@@ -171,7 +172,6 @@ h3 > a {
   50% {
     left: 0%;
     top: 50%;
-    opacity: 0.5;
   }
   75% {
     left: 0%;
