--- a/public/styles.css
+++ b/public/styles.css
@@ -41,12 +41,16 @@ h1 {
   font-family: "Tiempos Fine";
 }
 
-a > h1 {
+h1 > a {
   color: #ff4724;
+  font-family: "Tiempos Fine";
+  font-size: 42px;
+  font-weight: normal;
 }
 
-a:hover > h1 {
-  color: #fff;
+h1 > a:hover {
+  background-color: #fff;
+  color: #ff4724;
   font-style: italic;
 }
 
@@ -86,7 +90,44 @@ h3 > a {
   filter: blur(200px);
 }
 
+.lavCircle {
+  width: 60vw;
+  height: 60vw;
+  background-color: #e0deff;
+  position: absolute;
+  animation-name: lavCircle;
+  animation-duration: 20s;
+  border-radius: 50%;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  z-index: -1;
+  filter: blur(200px);
+}
+
 @keyframes greenCircle {
+  0% {
+    left: 50%;
+    top: 100%;
+  }
+  25% {
+    left: 75%;
+    top: 50%;
+  }
+  50% {
+    left: 50%;
+    top: 0%;
+  }
+  75% {
+    left: 0%;
+    top: 100%;
+  }
+  100% {
+    left: 0%;
+    top: 0%;
+  }
+}
+
+@keyframes lavCircle {
   0% {
     left: 0%;
     top: 0%;
@@ -109,80 +150,6 @@ h3 > a {
   }
 }
 
-.lavCircle {
-  width: 60vw;
-  height: 60vw;
-  background-color: #e0deff;
-  position: absolute;
-  animation-name: lavCircle;
-  animation-duration: 20s;
-  border-radius: 50%;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  z-index: -1;
-  filter: blur(200px);
-}
-
-@keyframes lavCircle {
-  0% {
-    left: 50%;
-    top: 100%;
-  }
-  25% {
-    left: 75%;
-    top: 50%;
-  }
-  50% {
-    left: 50%;
-    top: 0%;
-  }
-  75% {
-    left: 0%;
-    top: 100%;
-  }
-  100% {
-    left: 0%;
-    top: 0%;
-  }
-}
-
-.redCircle {
-  width: 20vw;
-  height: 20vw;
-  background-color: #ff4724; /* red */
-  position: absolute;
-  animation-name: redCircle;
-  animation-duration: 25s;
-  border-radius: 50%;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  z-index: -1;
-  filter: blur(200px);
-}
-
-@keyframes redCircle {
-  0% {
-    left: 50%;
-    top: 0%;
-  }
-  25% {
-    left: 50%;
-    top: 25%;
-  }
-  50% {
-    left: 0%;
-    top: 50%;
-  }
-  75% {
-    left: 0%;
-    top: 75%;
-  }
-  100% {
-    left: 50%;
-    top: 0%;
-  }
-}
-
 /* Mobile Optimization */
 @media screen and (max-width: 768px) {
   #root {
@@ -200,7 +167,8 @@ h3 > a {
   * {
     font-size: 14px;
   }
-  h1 {
+  h1,
+  h1 > a {
     font-size: 21px;
   }
   h2,
