--- a/public/styles.css
+++ b/public/styles.css
@@ -55,12 +55,18 @@ h1 > a:hover {
 }
 
 h2,
-h2 > span {
+h2 > span,
+h2 .label {
   color: #0f1433;
   font-family: "Tiempos Fine";
   font-weight: normal;
   font-size: 32px;
   line-height: 140%;
+}
+
+h2 .label {
+  padding: 0 50px 0 0;
+  width: 200px;
 }
 
 .nav,
@@ -164,11 +170,17 @@ h3 > a {
     background-color: #fff;
     overflow: hidden;
   }
-  * {
+  *,
+  a,
+  a:link,
+  a:active,
+  a:hover,
+  a:visited {
     font-size: 14px;
   }
   h1,
-  h1 > a {
+  h1 > a,
+  h1 > a:link {
     font-size: 21px;
   }
   h2,
@@ -178,4 +190,34 @@ h3 > a {
   h3 {
     font-size: 14px;
   }
+}
+
+/* scroll test */
+.actions {
+  display: block;
+  position: fixed;
+  bottom: 1rem;
+  left: 1rem;
+  padding: 0.5rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 2rem;
+}
+
+.actions > button {
+  padding: 0.5rem 1.25rem;
+  margin-right: 0.5rem;
+  border-radius: 1.25rem;
+  border: 0;
+  font-size: 1rem;
+  transition: all 0.1s ease-in-out;
+}
+
+.actions > button:hover,
+.actions > button:focus {
+  background-color: black;
+  color: white;
+}
+
+.actions > button:last-child {
+  margin-right: 0;
 }
