--- a/public/styles.css
+++ b/public/styles.css
@@ -158,6 +158,27 @@ h3 > a {
   }
 }
 
+.heroImg {
+  width: 50%;
+  height: 50%;
+}
+
+.heroProj {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  text-align: left;
+}
+
+.techIcon {
+  width: 50px;
+  height: 50px;
+}
+
+.projList {
+  display: block;
+}
+
 /* Mobile Optimization */
 @media screen and (max-width: 768px) {
   #root {
@@ -192,5 +213,16 @@ h3 > a {
   }
   h3 {
     font-size: 14px;
+  }
+  .heroImg {
+    width: 75%;
+    height: 75%;
+  }
+  .heroProj {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
   }
 }
