--- a/public/styles.css
+++ b/public/styles.css
@@ -22,35 +22,35 @@ body {
 
 a,
 a:visited {
-  color: #ff4724;
+  color: #0f1433;
   text-decoration: none;
   transition: 0.5s;
+  /* border-bottom: 1px solid #0f1433; */
 }
 
 a:hover {
   cursor: crosshair;
-  background-color: #ff4724;
-  color: #fff;
+  color: #ff4724;
+  /* border-bottom: 1px solid #ff4724; */
 }
 
 h1 {
   font-size: 42px;
   font-weight: normal;
   color: #0f1433;
-  text-decoration: none;
   font-family: "Tiempos Fine";
 }
 
-h1 > a {
-  color: #ff4724;
+#title > a,
+#title > a:visited {
   font-family: "Tiempos Fine";
   font-size: 42px;
   font-weight: normal;
+  color: #ff4724;
 }
 
-h1 > a:hover {
+#title > a:hover {
   background-color: transparent;
-  color: #ff4724;
   font-style: italic;
 }
 
@@ -80,6 +80,9 @@ h3 > a {
   text-transform: uppercase;
   font-size: 16px;
   line-height: 180%;
+}
+
+.nav:hover {
 }
 
 .greenCircle {
@@ -151,6 +154,29 @@ h3 > a {
     top: 100%;
   }
 } */
+
+/* Projects */
+.projectTitle {
+  font-size: 60px;
+  text-transform: uppercase;
+  font-style: italic;
+  transition: 0.5s;
+}
+
+.project {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  margin: 15px;
+  transition: 0.5s;
+}
+
+.project:hover > h2,
+.project:hover > h3 {
+  color: #e5ef53;
+}
 
 .heroImg {
   width: 50%;
