--- a/public/styles.css
+++ b/public/styles.css
@@ -82,9 +82,6 @@ h3 > a {
   line-height: 180%;
 }
 
-.nav:hover {
-}
-
 .greenCircle {
   width: 40vw;
   height: 40vw;
@@ -94,12 +91,13 @@ h3 > a {
   left: 0;
   border-radius: 50%;
   z-index: -1;
+  opacity: 0.5;
   filter: blur(200px);
 }
 
 .lavCircle {
-  width: 60vw;
-  height: 60vw;
+  width: 50vw;
+  height: 50vw;
   background-color: #e0deff;
   position: absolute;
   border-radius: 50%;
@@ -130,9 +128,9 @@ h3 > a {
     left: 0%;
     top: 0%;
   }
-}
+} */
 
-@keyframes lavCircle {
+/* @keyframes lavCircle {
   0% {
     left: 0%;
     top: 0%;
@@ -168,8 +166,8 @@ h3 > a {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 10px;
-  margin: 15px;
+  padding: 10px 0 10px 0;
+  margin: 15px 0 15px 0;
   transition: 0.5s;
 }
 
