--- a/public/styles.css
+++ b/public/styles.css
@@ -152,10 +152,12 @@ h3 > a {
   text-transform: uppercase;
   font-style: italic;
   transition: 0.5s;
+  padding: 0 25px 0 0;
 }
 
 .project {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
@@ -213,9 +215,9 @@ h3 > a {
   a:visited {
     font-size: 14px;
   }
-  h1,
-  h1 > a,
-  h1 > a:link {
+  #title > a,
+  #title > a:visited,
+  #title > a:hover {
     font-size: 21px;
   }
   h2,
