--- a/public/styles.css
+++ b/public/styles.css
@@ -203,9 +203,10 @@ h3 > a {
   }
   body {
     width: 100%;
-    height: 100%;
+    height: 95%;
     background-color: #fff;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
   }
   *,
   a,
