fix: h2 for projects

--- a/public/styles.css
+++ b/public/styles.css
@@ -155,7 +155,7 @@ h3 > a {
   text-transform: uppercase;
   font-style: italic;
   transition: 0.5s;
-  padding: 0 25px 0 0;
+  padding: 25px 25px 0 0 !important;
 }
 
 .project {
