--- a/public/styles.css
+++ b/public/styles.css
@@ -167,28 +167,28 @@ h3 > a {
   padding: 10px 0 10px 0;
   margin: 15px 0 15px 0;
   transition: 0.5s;
+  color: #0f1433;
 }
 
 .project:hover > h2,
 .project:hover > h3 {
-  color: #e5ef53;
+  color: #ff4724;
 }
 
 .heroImg {
-  width: 50%;
-  height: 50%;
+  width: 45%;
+  height: 45%;
+  margin: 5px;
+  box-shadow: 0 0 15px #e0deff;
 }
 
 .heroProj {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  text-align: left;
+  text-align: center;
 }
 
 .techIcon {
-  width: 50px;
-  height: 50px;
+  width: 35px;
+  height: 35px;
   padding: 0 10px 0 0;
 }
 
@@ -223,11 +223,15 @@ h3 > a {
   #title > a:visited,
   #title > a:hover {
     font-size: 21px;
+    margin-top: 0;
   }
   h2,
   h2 > span,
   .label {
     font-size: 21px;
+  }
+  .label {
+    padding-bottom: 25px;
   }
   h3 {
     font-size: 14px;
@@ -242,5 +246,8 @@ h3 > a {
     flex-wrap: wrap;
     justify-content: center;
     text-align: center;
+  }
+  .nav {
+    margin-top: 10px;
   }
 }
