fix: gradient css

--- a/public/styles.css
+++ b/public/styles.css
@@ -89,7 +89,7 @@ h3 > a {
   opacity: 0.5;
   filter: blur(200px);
   animation-name: greenCircle;
-  animation-duration: 15s;
+  animation-duration: 10s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
 }
@@ -105,9 +105,9 @@ h3 > a {
   z-index: -1;
   filter: blur(200px);
   animation-name: lavCircle;
-  animation-duration: 15s;
+  animation-duration: 10s;
   animation-iteration-count: infinite;
-  animation-direction: alternate;
+  animation-direction: normal;
 }
 
 @keyframes greenCircle {
@@ -244,5 +244,13 @@ h3 > a {
   }
   .nav {
     margin-top: 10px;
+  }
+  .lavCircle {
+    width: 400px;
+    height: 400px;
+  }
+  .greenCircle {
+    width: 200px;
+    height: 200px;
   }
 }
