--- a/public/styles.css
+++ b/public/styles.css
@@ -76,8 +76,8 @@ h3 > a {
 }
 
 .greenCircle {
-  width: 40vw;
-  height: 40vw;
+  width: 600px;
+  height: 600px;
   background-color: #e5ef53;
   position: absolute;
   bottom: 0;
@@ -93,8 +93,8 @@ h3 > a {
 }
 
 .lavCircle {
-  width: 50vw;
-  height: 50vw;
+  width: 800px;
+  height: 800px;
   background-color: #e0deff;
   position: absolute;
   border-radius: 50%;
@@ -144,7 +144,7 @@ h3 > a {
   text-transform: uppercase;
   font-style: italic;
   transition: 0.5s;
-  margin: 25px 25px 0 0;
+  margin: 25px 50px 0 0;
   border-bottom: 3px solid transparent;
   display: inline-block;
   position: relative;
@@ -207,6 +207,17 @@ h3 > a {
 }
 
 /* Mobile Optimization */
+@media screen and (max-width: 820px) {
+  .lavCircle {
+    width: 350px;
+    height: 350px;
+  }
+  .greenCircle {
+    width: 400px;
+    height: 400px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   #root {
     float: none;
