feat: hover reveal on projects

--- a/public/styles.css
+++ b/public/styles.css
@@ -32,19 +32,6 @@ h1 {
   font-family: "Tiempos Fine", "Playfair Display", serif;
 }
 
-#title > a,
-#title > a:visited {
-  font-family: "Tiempos Fine", "Playfair Display", serif;
-  font-size: 42px;
-  font-weight: normal;
-  color: #ff4724;
-}
-
-#title > a:hover {
-  background-color: transparent;
-  font-style: italic;
-}
-
 h2,
 h2 > span {
   color: #0f1433;
@@ -63,7 +50,6 @@ h2 > span {
   display: block;
 }
 
-.nav,
 h3,
 h3 > a {
   font-family: "Roboto Mono", monospace;
@@ -75,6 +61,25 @@ h3 > a {
   margin-top: 0;
 }
 
+h4 {
+  font-size: 27px;
+  font-style: italic;
+  font-weight: normal;
+  letter-spacing: -0.5px;
+  font-family: "Tiempos Fine", "Playfair Display", serif;
+  margin: 0;
+  padding: 0;
+  text-align: right;
+  color: #ff4724;
+}
+
+.snippet {
+  width: 75%;
+  float: right;
+  padding: 0 5px 0 0;
+}
+
+/* Gradients */
 .greenCircle {
   width: 600px;
   height: 600px;
@@ -110,12 +115,12 @@ h3 > a {
 
 @keyframes greenCircle {
   0% {
-    left: 25%;
-    bottom: 25%;
+    left: 0;
+    bottom: 0;
   }
   50% {
-    left: 50%;
-    bottom: 50%;
+    left: 22%;
+    bottom: 44%;
   }
   100% {
     left: 100%;
@@ -125,8 +130,8 @@ h3 > a {
 
 @keyframes lavCircle {
   0% {
-    right: 0%;
-    top: 0%;
+    right: 0;
+    top: 0;
   }
   50% {
     right: 50%;
@@ -138,20 +143,18 @@ h3 > a {
   }
 }
 
-/* Projects */
-.hover-underline-animation {
-  font-size: 60px;
+.nav,
+#title {
+  font-family: "Roboto Mono", monospace;
   text-transform: uppercase;
-  font-style: italic;
   transition: 0.5s;
-  margin: 25px 50px 0 0;
   border-bottom: 3px solid transparent;
   display: inline-block;
   position: relative;
-  color: #0f1433;
 }
 
-.hover-underline-animation:after {
+.nav:after,
+#title:after {
   content: "";
   position: absolute;
   width: 100%;
@@ -164,24 +167,31 @@ h3 > a {
   transition: transform 0.25s ease-out;
 }
 
-.hover-underline-animation:hover:after {
+.nav:hover:after,
+#title:hover:after {
   transform: scaleX(1);
   transform-origin: bottom left;
 }
 
-.hover-underline-animation:hover {
+.nav:hover {
   color: #ff4724;
 }
 
-.project {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 0 10px 0;
-  margin: 15px 0 15px 0;
-  transition: 0.5s;
+#title > a,
+#title > a:visited {
+  font-family: "Tiempos Fine", "Playfair Display", serif;
+  font-size: 42px;
+  font-weight: normal;
+  color: #0f1433;
+  text-transform: none;
+}
+
+/* Projects */
+.projTitle {
+  font-size: 60px;
+  text-transform: uppercase;
+  font-style: italic;
+  margin: 25px 25px 0 0;
   color: #0f1433;
 }
 
@@ -249,6 +259,7 @@ h3 > a {
     padding-top: 0;
     line-height: 21px;
     text-align: center;
+    color: #0f1433;
   }
   h2,
   h2 > span,
@@ -272,13 +283,21 @@ h3 > a {
     justify-content: center;
     text-align: center;
   }
-  .nav {
-    margin-top: 10px;
-  }
   .lavCircle {
     display: none;
   }
   .greenCircle {
     display: none;
+  }
+  .nav {
+    font-size: 40px;
+  }
+  h4 {
+    font-size: 25px;
+    padding: 0;
+    text-align: center;
+  }
+  .snippet {
+    width: 95%;
   }
 }
