--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,13 +29,13 @@ h1 {
   font-size: 42px;
   font-weight: normal;
   color: #0f1433;
-  font-family: "Tiempos Fine", "Nanum Myeongjo", serif;
+  font-family: "Tiempos Fine", "Noto Serif Display", serif;
 }
 
 h2,
 h2 > span {
   color: #0f1433;
-  font-family: "Tiempos Fine", "Nanum Myeongjo", serif;
+  font-family: "Tiempos Fine", "Noto Serif Display", serif;
   font-weight: normal;
   font-size: 32px;
   line-height: 140%;
@@ -107,7 +107,7 @@ h3 > a {
 
 #title > a,
 #title > a:visited {
-  font-family: "Tiempos Fine", "Nanum Myeongjo", serif;
+  font-family: "Tiempos Fine", "Noto Serif Display", serif;
   font-size: 42px;
   font-weight: normal;
   color: #0f1433;
@@ -162,7 +162,7 @@ h4 {
   font-size: 27px;
   font-style: italic;
   font-weight: normal;
-  font-family: "Tiempos Fine", "Nanum Myeongjo", serif;
+  font-family: "Tiempos Fine", "Noto Serif Display", serif;
   margin: 0;
   padding: 0;
   text-align: right;
