--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,13 +28,13 @@ h1 {
   font-size: 42px;
   font-weight: normal;
   color: #0f1433;
-  font-family: "Tiempos Fine", "Libre Baskerville", serif;
+  font-family: "Tiempos Fine", "Playfair Display", serif;
 }
 
 h2,
 h2 > span {
   color: #0f1433;
-  font-family: "Tiempos Fine", "Libre Baskerville", serif;
+  font-family: "Tiempos Fine", "Playfair Display", serif;
   font-weight: normal;
   font-size: 32px;
   line-height: 140%;
@@ -106,7 +106,7 @@ h3 > a {
 
 #title > a,
 #title > a:visited {
-  font-family: "Tiempos Fine", "Libre Baskerville", serif;
+  font-family: "Tiempos Fine", "Playfair Display", serif;
   font-size: 42px;
   font-weight: normal;
   color: #0f1433;
@@ -161,7 +161,7 @@ h4 {
   font-size: 27px;
   font-style: italic;
   font-weight: normal;
-  font-family: "Tiempos Fine", "Libre Baskerville", serif;
+  font-family: "Tiempos Fine", "Playfair Display", serif;
   margin: 0;
   padding: 0;
   text-align: right;
