--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -237,3 +237,18 @@ h4 {
     top: 60%;
   }
 }
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  /* height: 0; */
+  margin: 25px 0 50px 0;
+}
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 0 15px #e0deff;
+}
