fix: removed gradient for mobile

--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -80,8 +80,7 @@
     text-align: center;
   }
   .lavCircle {
-    width: 350px;
-    height: 350px;
+    display: none;
   }
   .greenCircle {
     display: none;
