--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -44,12 +44,14 @@
     font-size: 16px;
   }
 
-  h1,
+  h1 {
+    margin: 0 0 15px 0;
+  }
+
   #title > a,
   #title > a:visited,
   #title > a:hover {
     font-size: 25px;
-    margin: 0 0 15px 0;
     padding-top: 0;
     text-align: center;
     color: #0f1433;
