--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -61,6 +61,12 @@ h3 {
   &:link {
     background-color: transparent;
   }
+
+  &.featured {
+    margin: 0;
+    border-bottom: 1px solid #4c47a0;
+    padding: 0 0 15px 0;
+  }
 }
 
 /* Navbar and Title */
@@ -135,21 +141,20 @@ h3 {
 }
 
 /* Projects Title */
-h4 {
-  font-size: 27px;
-  font-style: italic;
-  font-weight: normal;
-  font-family: "Tiempos Fine", "Playfair Display", serif;
-  margin: 0;
-  padding: 0;
-  text-align: right;
-  color: #4c47a0;
-}
-
 .snippet {
-  width: 75%;
-  float: right;
-  padding: 0 5px 0 0;
+  width: 100%;
+  padding: 0 25px 0 25px;
+
+  h4 {
+    font-size: 27px;
+    font-style: italic;
+    font-weight: normal;
+    font-family: "Tiempos Fine", "Playfair Display", serif;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    color: #4c47a0;
+  }
 }
 
 /* Gradients */
@@ -229,4 +234,11 @@ h4 {
   width: 100%;
   height: 100%;
   box-shadow: 0 0 15px #e0deff;
+}
+
+.about-snippet {
+  h2 {
+    text-align: center;
+    padding: 25px;
+  }
 }
