feat: bring back the green gradient

--- a/src/css/mobile.scss
+++ b/src/css/mobile.scss
@@ -81,11 +81,9 @@
     justify-content: center;
     text-align: center;
   }
-  .lavCircle {
-    display: none;
-  }
   .greenCircle {
-    display: none;
+    width: 200px;
+    height: 200px;
   }
   .nav {
     font-size: 16px;
