--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -27,7 +27,7 @@ h1 {
     display: inline-block;
     padding-right: 8px;
 
-    @media (max-width: 768px) {
+    @media (max-width: 425px) {
       display: block;
     }
   }
@@ -133,6 +133,10 @@ h3 {
   font-style: italic;
   margin: 25px 25px 0 0;
   color: #0f1433;
+
+  @media (max-width: 768px) {
+    font-size: 42px;
+  }
 }
 
 .heroImg {
@@ -161,6 +165,10 @@ h3 {
   width: 100%;
   padding: 0 25px 0 25px;
 
+  @media (max-width: 768px) {
+    width: 90%;
+  }
+
   h4 {
     font-size: 27px;
     font-style: italic;
@@ -170,6 +178,10 @@ h3 {
     padding: 0;
     text-align: center;
     color: #4c47a0;
+
+    @media (max-width: 768px) {
+      font-size: 21px;
+    }
   }
 }
 
