--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -139,11 +139,35 @@ h3 {
   }
 }
 
-.heroImg {
-  width: 45%;
-  height: 45%;
-  margin: 5px;
-  box-shadow: 0 0 15px #e0deff;
+.project-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding: 0 0 25px 0;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
+
+  .heroImg {
+    width: 45%;
+    margin: 5px;
+    box-shadow: 0 0 15px #e0deff;
+
+    @media (max-width: 768px) {
+      width: 99%;
+    }
+  }
+}
+
+.view-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  padding-bottom: 25px;
 }
 
 .heroProj {
