fix: mobile opt

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -80,7 +80,6 @@ h3 {
 
   &.featured {
     margin: 0;
-    border-bottom: 1px solid #4c47a0;
     padding: 0 0 15px 0;
   }
 }
@@ -151,7 +150,7 @@ h3 {
     flex-direction: column;
   }
 
-  .heroImg {
+  .active {
     width: 45%;
     margin: 5px;
     box-shadow: 0 0 15px #e0deff;
@@ -172,6 +171,25 @@ h3 {
 
 .heroProj {
   text-align: center;
+
+  .active {
+    width: 45%;
+    margin: 5px;
+
+    @media (max-width: 768px) {
+      width: 99%;
+    }
+  }
+
+  .techIcon {
+    width: 35px;
+    height: 35px;
+    padding: 0 10px 0 0;
+
+    @media (max-width: 768px) {
+      width: 50px;
+    }
+  }
 }
 
 .projList {
