--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -10,6 +10,22 @@ body {
   }
 }
 
+/* scrollbar */
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #e0deff36;
+  border-radius: 25px;
+}
+
 a {
   color: #0f1433;
   text-decoration: none;
@@ -49,7 +65,31 @@ h1 {
 
     &:hover {
       color: #4c47a0;
-      cursor: crosshair;
+      text-decoration: none;
+      border-bottom: none;
+    }
+    &:after {
+      content: "";
+      border-bottom: 0.5px solid #4c47a0;
+      display: block;
+      width: 100%;
+      height: 1px;
+      background: #4c47a0;
+      transform: scaleX(1);
+      transition: transform 0.3s ease-in-out;
+      transform-origin: 0% 50%;
+      margin-top: 8px;
+
+      @media (max-width: 768px) {
+        margin-top: 2px;
+      }
+    }
+    &:hover:after,
+    &:focus:after,
+    &:active:after {
+      transform: scaleX(0);
+      transform-origin: 100% 50% 0;
+      width: 100%;
     }
   }
 }
@@ -180,7 +220,7 @@ h3 {
   text-align: center;
 
   .active {
-    width: 45%;
+    width: 60%;
     margin: 5px;
 
     @media (max-width: 768px) {
@@ -225,11 +265,13 @@ h3 {
     font-family: "Tiempos Fine", "Playfair Display", serif;
     margin: 0;
     padding: 0;
-    text-align: center;
+    text-align: left;
+    line-height: 130%;
     color: #4c47a0;
 
     @media (max-width: 768px) {
       font-size: 21px;
+      text-align: center;
     }
   }
 }
@@ -247,7 +289,7 @@ h3 {
   opacity: 0.5;
   filter: blur(200px);
   animation-name: greenCircle;
-  animation-duration: 10s;
+  animation-duration: 8s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
 
