--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -257,24 +257,27 @@ h3 {
 
 /* Gradients */
 .greenCircle {
-  width: 500px;
-  height: 500px;
+  width: 300px;
+  height: 300px;
   background-color: #e5ef53;
   position: absolute;
   bottom: 0;
   left: 0;
   border-radius: 50%;
   z-index: -1;
-  opacity: 0.5;
+  opacity: 1;
   filter: blur(200px);
+
   animation-name: greenCircle;
   animation-duration: 8s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
 
-  // @media (max-width: 768px) {
-  //   display: none;
-  // }
+  @media (min-width: 768px) {
+    width: 500px;
+    height: 500px;
+    opacity: 0.75;
+  }
 }
 
 @keyframes greenCircle {
